--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://cdn.icon-icons.com/icons2/851/PNG/512/pikachu_icon-icons.com_67535.png" />
+    <link rel="icon" href="../public/icon-pickachu.png" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -10,7 +10,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Mi Lista de Pokemon</title>
+    <title>My Pokedex</title>
   </head>
   <body>
     <div id="root"></div>
